<resources>
    <string name="app_name">手机之家</string>
    <string name="entry">立即体验</string>
    <!--Application ID-->
    <string name="appID">136c322f4dda2c9d187c15e267759be6</string>
    <!--登陆活动-->
    <string name="act_login_forgetpwd">忘记密码</string>
    <string name="act_login_account">请输入账号</string>
    <string name="act_login_pwd">请输入密码</string>
    <string name="act_login_login">登录</string>
    <string name="act_login_reg">注册</string>
    <!--忘记密码活动-->
    <string name="act_forget_forgetpwd">忘记密码</string>
    <string name="act_forget_email">请输入邮箱</string>
    <string name="act_forget_sure">确认</string>
    <!--注册活动-->
    <string name="act_reg_title">注册</string>
    <string name="act_reg_account">账号</string>
    <string name="act_reg_pwd">密码</string>
    <string name="act_reg_surepwd">确认密码</string>
    <string name="act_reg_phone">手机号码</string>
    <string name="act_reg_email">邮箱</string>
    <string name="act_reg_signature">个性签名</string>
    <string name="act_reg_reg">注册</string>
    <!--发布文章活动-->
    <string name="act_test_richeditor_title">撰写文章</string>
    <string name="act_test_richeditor_addcategory">添加标签</string>
    <string name="act_test_richeditor_submit">发布</string>
    <!--忘记密码活动-->
    <string name="act_forget_fail">该邮箱尚未注册</string>
    <!--添加标签窗口-->
    <string name="window_addcategory">添加标签</string>
    <string name="window_surebtn">确认</string>

    <!--评论碎片-->
    <string name="item_comment_level1_more">查看回复</string>
    <string name="item_comment_level1_comment">回复</string>

    <!--回复评论碎片-->
    <string name="item_comment_reply_submitbtn">发布</string>
    <string name="item_comment_reply_edittexthint">友善评论是交流的基础~</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--高德DEMO 字符串-->
    <string name="animate">Animate</string>
    <string name="basic_map">基本地图</string>
    <string name="basic_description">介绍如何创建一个基本地图</string>
    <string name="osm_map">OSM地图</string>
    <string name="osm_description">介绍如何替换高德底图,显示诸如osm之类的底图</string>
    <string name="base_fragment_map">SupportMapFragment创建地图</string>
    <string name="base_fragment_description">介绍SupportMapFragment方式创建地图</string>
    <string name="camera_demo">Camera功能</string>
    <string name="camera_description">介绍在地图中操作Camera各种功能</string>
    <string name="clear_map">Clear</string>
    <string name="compass">指南针</string>
    <string name="custom_info_contents">Custom info contents</string>
    <string name="custom_info_window">Custom info window</string>
    <string name="default_info_window">Default info window</string>
    <string name="demo_title">2D地图示例</string>
    <string name="down_arrow">\u2193</string>
    <string name="drag_melbourne">Drag Melbourne</string>
    <string name="events_demo">Events功能</string>
    <string name="events_description">介绍对地图的点击，长按，拖动地图事件功能</string>
    <string name="fill_stroke">Fill Stroke</string>
    <string name="fill_color">Fill Color</string>
    <string name="go_to_zhongguancun">中关村</string>
    <string name="go_to_lujiazui">陆家嘴</string>
    <string name="hybrid">Hybrid</string>
    <string name="location">正在定位中</string>

    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/satellite</item>
    </string-array>

    <string name="layers_demo">Layers图层功能</string>
    <string name="layers_description">介绍地图分别以正常、卫星模式展示出</string>
    <string name="left_arrow">\u2190</string>
    <string name="locationsource_demo">Location小蓝点功能</string>
    <string name="locationsource_description">介绍对系统定位显示小蓝点功能</string>
    <string name="locationGPS_demo">gps定位功能</string>
    <string name="locationGPS_description">介绍如何使用gps定位</string>
    <string name="locationSensorGPS_demo">gps追随功能</string>
    <string name="locationSensorGPS_demo_description">介绍如何用gps定位图标箭头随手机转动而转动</string>
    <string name="locationNetwork_description">介绍如何使用网络定位</string>
    <string name="locationNetwork_demo">网络定位功能</string>
    <string name="marker_demo">Markers功能</string>
    <string name="marker_description">介绍在地图上添加marker和infoWindow</string>
    <string name="mapOption_demo">AMapOptions实现地图</string>
    <string name="mapOption_description">介绍用AMapOptions展示一个地图</string>
    <string name="map_not_ready">SupportMapFragment初始化失败</string>
    <string name="move_the_camera">移动camera</string>
    <string name="my_location">My Location</string>
    <string name="mylocation_layer">我的位置图层</string>
    <string name="no_demos">No demos</string>
    <string name="normal">Normal</string>
    <string name="polygon_demo">Polygons功能</string>
    <string name="polygon_description">介绍在地图绘制多边形</string>
    <string name="polyline_demo">Polylines功能</string>
    <string name="polyline_description">介绍在地图中绘制线条</string>
    <string name="groundoverlay_demo">GroundOverlay功能</string>
    <string name="groundoverlay_description">介绍在地图中绘制GroundOverlay功能</string>
    <string name="circle_demo">Circles功能</string>
    <string name="circle_description">介绍在地图中绘制圆形</string>
    <string name="screenshot_demo">地图截屏功能</string>
    <string name="screenshot_description">介绍对地图进行截屏</string>
    <string name="properties_polyline">设置Polyline属性</string>
    <string name="properties_polygon">设置Polygon属性</string>
    <string name="properties_circle">设置Circle属性</string>
    <string name="busline_demo">Busline公交查询</string>
    <string name="busline_description">介绍如何在地图中绘制BusLine</string>
    <string name="route_demo">Route路径规划</string>
    <string name="route_description">介绍如何在地图中绘制Route</string>
    <string name="rotate">旋转手势</string>
    <string name="reset_map">Reset</string>
    <string name="right_arrow">\u2192</string>
    <string name="satellite">Satellite</string>
    <string name="scroll">滑动手势</string>
    <string name="stop_animation">\u25A0</string>
    <string name="stroke_width">Stroke Width</string>
    <string name="tap_instructions">点击或者长按地图</string>
    <string name="terrain">Terrain</string>
    <string name="tilt">倾斜手势</string>
    <string name="traffic">Traffic</string>
    <string name="transparency">Transparency</string>
    <string name="uisettings_demo">UI Settings功能</string>
    <string name="uisettings_description">介绍地图中UI Settings功能</string>
    <string name="geocoder_demo">地理编码 功能</string>
    <string name="geocoder_description">介绍 geocoder地理编码 功能</string>
    <string name="poikeywordsearch_demo">poi关键字搜索</string>
    <string name="poikeywordsearch_description">介绍poi关键字搜索功能</string>
    <string name="poiaroundsearch_demo">poi周边搜索</string>
    <string name="poiaroundsearch_description">介绍poi周边搜索功能</string>
    <string name="offlinemap_demo">离线地图功能</string>
    <string name="offlinemap_description">介绍如何使用离线地图</string>
    <string name="search_title">搜索关键字</string>
    <string name="up_arrow">\u2191</string>
    <string name="width">Width</string>
    <string name="zoom_buttons">缩放按钮</string>
    <string name="zoom_gestures">缩放手势</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="scale">比例尺</string>
    <string name="buttonScale">获取比例尺</string>
    <string name="logo_position">logo位置</string>
    <string name="bottom_left">左下</string>
    <string name="bottom_center">底部居中</string>
    <string name="bottom_right">右下</string>
    <string name="map_screenshot">地图截屏</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="district_demo">行政区划查询</string>
    <string name="district_description">政区划查询功能演示</string>
    <string name="district_boundary_demo">行政区划边界查询</string>
    <string name="district_boundary_description">政区划查询功能返回边界演示</string>
    <string name="share_demo">短串分享</string>
    <string name="share_description">短串分享功能演示</string>
    <string name="cloud_demo">云图搜索</string>
    <string name="cloud_description">介绍云图搜索功能</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="district">区/县</string>
    <string name="location_share">位置分享</string>
    <string name="route_share">路径规划分享</string>
    <string name="poi_share">POI分享</string>
    <string name="navi_share">导航分享</string>
    <string name="cloud_id_search">ID搜索</string>
    <string name="cloud_arround_search">周边搜索</string>
    <string name="cloud_polygon_search">多边形搜索</string>
    <string name="cloud_local_search">本地搜索</string>
    <string name="cloud_base_field">基本字段</string>
    <string name="cloud_id">POI ID(_id)</string>
    <string name="cloud_item_name">名称(_name)</string>
    <string name="cloud_latlon">经纬度(_location)</string>
    <string name="cloud_address">地址(_address)</string>
    <string name="cloud_item_createtime">创建时间(_createtime)</string>
    <string name="cloud_item_updatetime">更新时间(_updatetime)</string>
    <string name="cloud_item_distance">距Center距离(_distance)</string>
    <string name="cloud_item_identify">自定义字段</string>
    <string name="weather_demo">天气查询</string>
    <string name="weather_description">天气预报功能</string>
    <string name="abroad_demo">国内外地图切换</string>
    <string name="abroad_description">实现国内国外地图无缝切换</string>
    <string name="subpoi_demo">POI父子关系</string>
    <string name="subpoi_description">介绍POI的父子关系功能</string>
    <string name="weather_live">实时</string>
    <string name="weather_forecast">预报</string>
    <string name="report_time">发布时间</string>
    <string name="sydney">悉尼</string>
    <string name="beijing">北京</string>


    <string name="map_create">创建地图</string>
    <string name="map_interactive">地图交互</string>
    <string name="map_overlay">地图上绘制</string>
    <string name="search_data">查询地图数据</string>
    <string name="search_route">出行路线规划</string>
    <string name="map_offline">离线地图</string>
    <string name="map_tools">地图计算工具</string>
    <string name="search_share">短串分享</string>
    <string name="blank"></string>
    <string name="multi_inst">地图多实例</string>
    <string name="logo">地图Logo位置</string>
    <string name="gesture">手势交互</string>
    <string name="inputtips_demo">输入提示</string>
    <string name="inputtips_description">输入提示功能</string>
    <string name="geodesic_demo">绘制大地曲线</string>
    <string name="geodesic_description">绘制大地曲线功能</string>
    <string name="colourline_demo">绘制彩色线</string>
    <string name="colourline_description">绘制彩色线功能</string>
    <string name="regeocoder_demo">逆地理编码功能</string>
    <string name="regeocoder_description">介绍regeocoder逆地理编码功能</string>
    <string name="map_zoom">自定义缩放</string>
    <string name="animate_demo">地图动画效果</string>
    <string name="animate_description">animate</string>
    <string name="custommarker_demo">自定义Marker</string>
    <string name="route_drive">驾车路径规划</string>
    <string name="route_bus">公交路径规划</string>
    <string name="route_walk">步行路径规划</string>
    <string name="busstation_demo">公交站点查询</string>
    <string name="poiidsearch_demo">poiID搜索功能</string>
    <string name="customlocation_demo">Location小蓝点自定义功能</string>
    <string name="location_rotatemarker">定位箭头旋转</string>
    <string name="marker_click">Marker点击回调</string>
    <string name="infowindow_demo">InfoWindow功能</string>
    <string name="tileoverlay_demo">TileOverlay绘制</string>
    <string name="coordconvert_demo">坐标系转换</string>
    <string name="contains_demo">点是否在多边形内</string>
    <string name="calculateLineDistance">两点间距离</string>
    <string name="convertgeo2point_demo">经纬度转屏幕像素</string>
    <string name="routepoisearch_demo">沿途搜索</string>
    <string name="route_ride">骑行路径规划</string>

    <string name="locationmodesource_demo">Location几种模式</string>
    <string name="locationmodesource_description">介绍定位、追随等选择不同模式使用</string>
</resources>
