<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.graduateassignment.Repair.FillInOrderActivity">

    <!--手机名称 故障问题-->
    <LinearLayout
        android:background="@color/gray_lite"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/act_fillinorder_back"
            android:src="@drawable/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/black"
            android:textSize="@dimen/txtsize_big"
            android:padding="@dimen/dimen_8dp"
            android:gravity="start"
            android:textStyle="bold"
            android:id="@+id/act_fillinorder_brand"
            android:text="手机品牌"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginBottom="@dimen/dimen_32dp"
            android:textColor="@color/black"
            android:textSize="@dimen/txtsize_small"
            android:padding="@dimen/dimen_8dp"
            android:gravity="start"
            android:id="@+id/act_fillinorder_name"
            android:text="手机名称手机名称"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/act_fillinorder_problemlist"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>

    <!--维修订单信息： 电话 省份 市 区 地址 问题阐述 -->
    <LinearLayout
        android:paddingTop="@dimen/dimen_56dp"
        android:paddingLeft="@dimen/dimen_8dp"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="0dp"
        android:layout_weight="6"
        android:layout_height="match_parent">

        <!--省市区-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_countryInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_provinceInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_cityInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_districtInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ScrollView
                android:layout_marginRight="@dimen/dimen_8dp"
                android:layout_marginLeft="@dimen/dimen_8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <!--省-->
                        <LinearLayout
                            android:background="@drawable/shape_round_gray"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dimen_16dp"
                            android:orientation="horizontal" >

                            <Spinner
                                android:id="@+id/spinner_province"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="3" />

                            <TextView
                                android:id="@+id/textView1"
                                android:gravity="center"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="@string/province" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >
                        <!--市-->
                        <LinearLayout
                            android:layout_marginBottom="@dimen/dimen_16dp"
                            android:background="@drawable/shape_round_gray"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                            <Spinner
                                android:id="@+id/spinner_city"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="3" />

                            <TextView
                                android:id="@+id/textView2"
                                android:gravity="center"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="@string/city" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >
                        <!--区-->
                        <LinearLayout
                            android:layout_marginBottom="@dimen/dimen_16dp"
                            android:background="@drawable/shape_round_gray"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                            <Spinner
                                android:id="@+id/spinner_district"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="3" />

                            <TextView
                                android:id="@+id/textView3"
                                android:gravity="center"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="@string/district" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <!--地址-->
        <EditText
            android:id="@+id/act_fillinorder_address"
            android:background="@drawable/shape_round_gray"
            android:hint="请输入详细地址"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!--电话-->
        <EditText
            android:id="@+id/act_fillinorder_phone"
            android:background="@drawable/shape_round_gray"
            android:inputType="phone"
            android:hint="请输入电话号码"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!--备注-->
        <EditText
            android:id="@+id/act_fillinorder_comment"
            android:background="@drawable/shape_round_gray"
            android:hint="备注"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!--提交按钮-->

        <Button
            android:id="@+id/act_fillinorder_submit"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_72dp"
            android:text="预约下单"
            android:textColor="@color/blue"
            android:background="@drawable/shape_round_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
